<resources>
    <string name="app_name">Find a Pet</string>
    <string name="empty_string"></string>
    <string name="menu_discover">Pets</string>
    <string name="menu_shelters">Shelters</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="descriptor_pet_image">Pet Image</string>
    <string name="age_breed" formatted="false">%s | %s</string>
    <string name="distance_less_than_one">&lt; 1 mile</string>
    <string name="tab_dog">Dogs</string>
    <string name="tab_cat">Cats</string>
    <string name="tab_smallfurry">Small &amp; Furry</string>
    <string name="tab_barnyard">Barnyard</string>
    <string name="tab_bird">Birds</string>
    <string name="tab_horse">Horses</string>
    <string name="tab_rabbit">Rabbits</string>
    <string name="tab_reptile">Scales, Fins &amp; Other</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="pet_image">pet image</string>
    <string name="favorite">Favorite</string>
    <string name="animal_details_tab_details">DETAILS</string>
    <string name="animal_details_tab_location">LOCATION</string>
    <string name="animal_details_about">ABOUT</string>
    <string name="animal_details_description">MEET %s</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">Unknown</string>
    <string name="sex">Sex</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extra_large">XL</string>
    <string name="missing">--</string>
    <string name="special_needs">Special needs</string>
    <string name="no_dogs">Prefers a home without dogs</string>
    <string name="no_cats">Prefers a home without cats</string>
    <string name="no_kids">Prefers a home without kids</string>
    <string name="no_claws">Declawed</string>
    <string name="has_shots">Vaccinations up-to-date</string>
    <string name="house_broken">Housebroken</string>
    <string name="house_trained">House-trained</string>
    <string name="altered">Spayed/neutered</string>
    <string name="baby">Baby</string>
    <string name="young">Young</string>
    <string name="adult">Adult</string>
    <string name="senior">Senior</string>
    <string name="drawer">Navigation Drawer</string>
    <string name="drawer_content">Navigation drawer content</string>
    <string name="missing_location_arrow">missing location arrow</string>
    <string name="search">Search</string>
    <string name="filter_title">Filters</string>
    <string name="filter_search_button">search with filter</string>
    <string name="chip_near_location">Near %s</string>
    <string name="sex_header">SEX</string>
    <string name="breed_header">BREED</string>
    <string name="age_header">AGE</string>
    <string name="size_header">SIZE</string>
    <string name="filter_breed_hint">Filter breed</string>
    <string name="breed_title">Breeds</string>
    <string name="breed_search_button">choose breed</string>
    <string name="no_animals_title">No Animals!</string>
    <string name="no_animals_body1">We couldn\'t find any animals that match your criteria</string>
    <string name="no_animals_body2">Try removing some filters or changing your location</string>
    <string name="no_location_title">Location Missing</string>
    <string name="no_location_body1">We can\'t search for pets until you choose a location</string>
    <string name="no_location_body2">set a location above to start searching for pets</string>
    <string name="location_error_title">Location Error!</string>
    <string name="location_error_body1">We had trouble finding your location</string>
    <string name="location_error_body2">Try manually setting your location above instead</string>
    <string name="backend_error_title">Sorry!</string>
    <string name="backend_error_body1">Something went wrong with the Petfinder server</string>
    <string name="backend_error_body2">Please try again later</string>
    <string name="generic_error_title">Sorry!</string>
    <string name="generic_error_body1">Something\'s messed up right now</string>
    <string name="generic_error_body2">Please try again later</string>
    <string name="about">ABOUT</string>
    <string name="made_by">Made by Kevin Pauly</string>
    <string name="give_back">GIVE BACK</string>
    <string name="feedback">Send Feedback</string>
    <string name="email_choice">Send email</string>
    <string name="references">REFERENCES</string>
    <string name="thanks">Thanks and Attributions</string>
    <string name="licenses">Licenses</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="favorite_snackbar_message">Pet added to favorites</string>
    <string name="unfavorite_snackbar_message">Pet removed from favorites</string>
    <string name="partial_shelter_note">This shelter does not allow us to determine its precise name and location. We apologize for any inconvenience.</string>
    <string name="debug_settings">DEBUG SETTINGS</string>
    <string name="hardcode_location">Hardcode location to 48335</string>
    <string name="animal_warning_description">animal warning</string>
    <string name="pet_warning_dialog_title">Info Missing!</string>
    <string name="pet_warning_dialog_body">%s\'s shelter does not allow for us to search for %s directly, so we can\'t tell if %s is still available for adoption, sorry!</string>
    <string name="pet_warning_dialog_contact">CONTACT SHELTER</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="pronoun_male_subject">he</string>
    <string name="pronoun_female_subject">she</string>
    <string name="pronoun_male_object">him</string>
    <string name="pronoun_female_object">her</string>
    <string name="pronoun_missing">it</string>
    <string name="pet_adopted_dialog_title">Pet Adopted!</string>
    <string name="pet_adopted_dialog_body">We can\'t find anything about %s in the Petfinder records. This most often means that %s has found a forever home!</string>
    <string name="pet_adopted_remove_button">REMOVE FROM FAVORITES</string>
</resources>
