<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="tech.pauly.findapet.discover.FilterViewModel" />

        <import type="android.view.View" />

        <import type="tech.pauly.findapet.data.models.Sex" />

        <import type="tech.pauly.findapet.data.models.Age" />

        <import type="tech.pauly.findapet.data.models.AnimalSize" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="0dp">

        <TextView
            android:id="@+id/sex_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/sex_header"
            android:textAppearance="@style/FontStrongHeader"
            android:textColor="@color/textStandard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/sex_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/sex_header">

            <ToggleButton
                android:id="@+id/button_male"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/half_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedSex == Sex.MALE}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkSex(v, Sex.MALE)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/male"
                android:textOn="@string/male"
                tools:checked="true" />

            <ToggleButton
                android:id="@+id/button_female"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedSex == Sex.FEMALE}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkSex(v, Sex.FEMALE)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/female"
                android:textOn="@string/female" />
        </RadioGroup>

        <View
            android:id="@+id/divider_sex"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@color/offWhite"
            app:layout_constraintTop_toBottomOf="@+id/sex_radio_group" />

        <TextView
            android:id="@+id/age_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/age_header"
            android:textAppearance="@style/FontStrongHeader"
            android:textColor="@color/textStandard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_sex" />

        <RadioGroup
            android:id="@+id/age_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/age_header">

            <ToggleButton
                android:id="@+id/button_baby"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedAge == Age.BABY}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkAge(v, Age.BABY)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/baby"
                android:textOn="@string/baby" />

            <ToggleButton
                android:id="@+id/button_young"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedAge == Age.YOUNG}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkAge(v, Age.YOUNG)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/young"
                android:textOn="@string/young" />

            <ToggleButton
                android:id="@+id/button_adult"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedAge == Age.ADULT}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkAge(v, Age.ADULT)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/adult"
                android:textOn="@string/adult" />

            <ToggleButton
                android:id="@+id/button_senior"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedAge == Age.SENIOR}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkAge(v, Age.SENIOR)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/senior"
                android:textOn="@string/senior" />
        </RadioGroup>

        <View
            android:id="@+id/divider_age"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@color/offWhite"
            app:layout_constraintTop_toBottomOf="@+id/age_radio_group" />

        <TextView
            android:id="@+id/size_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/size_header"
            android:textAppearance="@style/FontStrongHeader"
            android:textColor="@color/textStandard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_age" />

        <RadioGroup
            android:id="@+id/size_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/size_header">

            <ToggleButton
                android:id="@+id/button_small"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedSize == AnimalSize.SMALL}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkSize(v, AnimalSize.SMALL)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/small"
                android:textOn="@string/small" />

            <ToggleButton
                android:id="@+id/button_medium"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedSize == AnimalSize.MEDIUM}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkSize(v, AnimalSize.MEDIUM)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/medium"
                android:textOn="@string/medium" />

            <ToggleButton
                android:id="@+id/button_large"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedSize == AnimalSize.LARGE}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkSize(v, AnimalSize.LARGE)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/large"
                android:textOn="@string/large" />

            <ToggleButton
                android:id="@+id/button_xl"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_filter_button"
                android:checked="@{viewModel.selectedSize == AnimalSize.EXTRA_LARGE}"
                android:drawableEnd="@drawable/ic_check"
                android:elevation="4dp"
                android:gravity="start|center_vertical"
                android:onClick="@{(v) -> viewModel.checkSize(v, AnimalSize.EXTRA_LARGE)}"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                android:singleLine="true"
                android:textAppearance="@style/FontSmall"
                android:textColor="@drawable/selector_filter_button_text"
                android:textOff="@string/extra_large"
                android:textOn="@string/extra_large" />
        </RadioGroup>

        <View
            android:id="@+id/divider_size"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:background="@color/offWhite"
            app:layout_constraintTop_toBottomOf="@+id/size_radio_group" />

        <TextView
            android:id="@+id/breed_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/breed_header"
            android:textAppearance="@style/FontStrongHeader"
            android:textColor="@color/textStandard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_size" />

        <Button
            android:id="@+id/button_breed_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:background="@drawable/selector_rounded_button"
            android:drawableEnd="@drawable/ic_search"
            android:drawableTint="@color/purpleStandard"
            android:elevation="4dp"
            android:gravity="start|center_vertical"
            android:onClick="@{viewModel::clickBreedSearch}"
            android:paddingEnd="@dimen/half_margin"
            android:paddingStart="@dimen/half_margin"
            android:singleLine="true"
            android:text="@string/filter_breed_hint"
            android:textAppearance="@style/FontSmall"
            android:textColor="@color/purpleLight"
            android:textOff="@string/small"
            android:textOn="@string/small"
            app:layout_constraintTop_toBottomOf="@id/breed_header" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/half_margin"
            app:layout_constraintTop_toBottomOf="@id/button_breed_search"/>
    </android.support.constraint.ConstraintLayout>
</layout>